2005-01-07  Erik Hjortsberg  <erik@katastrof.nu>

	* removed unnecessary config file

2005-01-07  Erik Hjortsberg  <erik@katastrof.nu>

	* made chat bubbles a bit smaller and added comments

2005-01-07  Erik Hjortsberg  <erik@katastrof.nu>

	* better handling of types, get all in a hierarcy after they've all been loaded

2005-01-07  Erik Hjortsberg  <erik@katastrof.nu>

	* improves resource handling for modeldefinitions
	* added dynamic tree generation
		this is preliminary, to be replaced with a better solution in the future
		it will really bring your GPU to its knees
		it can be turned on and off in the config file
	* added better Makefile handling of modeldefinition files (thanks Al Riddoch)
	* use preloading of resources to prevent stuttering in the gameplay

2005-01-06  Erik Hjortsberg  <erik@katastrof.nu>

	* make water a child of the world
	* fixed foliage

2005-01-05  Erik Hjortsberg  <erik@katastrof.nu>

	* clean up the code

2005-01-05  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed wrong path for CEGUI's schemafiles

2005-01-05  Erik Hjortsberg  <erik@katastrof.nu>

	* chat windows now fade out over time, and are removed when the player moves away from the npc. This can be set in the config file.

2005-01-05  Erik Hjortsberg  <erik@katastrof.nu>

	* correct ordering of libs to avoid compile error

2005-01-04  Erik Hjortsberg  <erik@katastrof.nu>

	* moved all use of terrain coordinates, both in ogre and in atlas, to the common class TerrainPosition
	* (EmberTerrainSceneManager.cpp) increased the page offset
	* ember now loads all terrain at start, this might be slow on older machines. In the future we'll implement a paging mechanism.
	* removed WF2OGRE_VECTOR3 macros
	* moved to CEGUI 0.1.0, which uses ogre's resource system, thus making it easier to manage resources. This prompted some changes to the paths for gui elements.
	* (DebugWidget)minor modifications
	* (AvatarCamera)added method to get the screen coords for a given entity