@@ -1,16 +1,16 @@
 [paths]
 sharedir = "/usr/local/share/forge"
-datadir = "/home/erik/opt/worldforge/share/ember/data"
+#datadir = "/home/erik/opt/worldforge/share/ember/data"
 
-[media]
-modeldefinitions = "Media/modeldefinitions"
-common = "Media/common"
-programs = "Media/materials/programs"
-fonts = "Media/fonts"
-materials = "Media/materials/scripts"
-textures = "Media/materials/textures"
-models = "Media/models"
-particles = "Media/particle"
+#[media]
+#modeldefinitions = "Media/modeldefinitions"
+#common = "Media/common"
+#programs = "Media/materials/programs"
+#fonts = "Media/fonts"
+#materials = "Media/materials/scripts"
+#textures = "Media/materials/textures"
+#models = "Media/models"
+#particles = "Media/particle"
 
 #FileSystem=packs/pig/
 #FileSystem=packs/squirrel/
@@ -26,13 +26,19 @@ rock = "terr_dirt-grass.jpg"
 seabottom = "dark.png"
 
 [graphics]
+#if set to true, and your GPU can handle it, water will be shown using pixel shaders, making for a very realistic effect
 fresnelwater = false
+#if set to true, the ground will be covered with foliage
 foliage = false
 
 [foliage]
+#the size of each submesh
 submeshsize = 16
+#the spacing between the grass meshes
 spacing_grass = 4
+#the spacing between the bush meshes
 spacing_bushes = 10
+#how far away foliage should be shown
 cullingdistance = 32
 
 
@@ -52,10 +58,14 @@ lodmorphstart = 0.2
 usedebuglodcolors = false
 
 [ingamechatwidget]
+#how long the chat bubbles will be shown
 timeshown = 30
+#how far away the chat bubbles will be shown
 distanceshown = 30
 
 [tree]
+#if set to false, ember will autogenerate the trees
+#the current imlementation requires a very powerful GPU
 usepregeneratedtrees = true
 
 
