@@ -41,7 +41,8 @@ dist_ceguilayouts_DATA = cegui/datafiles/layouts/GUILayout.xsd
 dist_ceguischemes_DATA = cegui/datafiles/schemes/TaharezLook.scheme cegui/datafiles/schemes/TaharezLookWidgetAliases.scheme cegui/datafiles/schemes/TaharezLookWidgets.scheme cegui/datafiles/schemes/WindowsLook.scheme cegui/datafiles/schemes/WindowsLookWidgets.scheme cegui/datafiles/schemes/GUIScheme.xsd
 dist_ceguischema_DATA = cegui/datafiles/layouts/GUILayout.xsd cegui/datafiles/imagesets/Imageset.xsd cegui/datafiles/fonts/Font.xsd cegui/datafiles/schemes/GUIScheme.xsd
 
-INCLUDES = -I$(top_srcdir)/src -DETCDIR=\"@sysconfdir@\"
+INCLUDES = -I$(top_srcdir)/src -DETCDIR=\"@sysconfdir@\" -DEMBERDATADIR=\"@datadir@/ember/data/\"
+
 confdir = @sysconfdir@/ember/
 dist_conf_DATA = ogre.cfg plugins.cfg  resources.cfg 
 
